--- a/수정사항.md
+++ b/수정사항.md
@@ -12,8 +12,29 @@ npm install vite@latset
 - 설치가 완료되면 ```npm run dev``` 를 통해서 영어 o와 enter를 입력하면 브라우저에서 실행화면을 돌릴 수 있음
 ## 사용 라이브러리
 ### CSS
-- bootstrap 보단 tailwind
+- bootstrap 보단 tailwind을 사용하기로 함
+    - bootstrap보다 tailwind가 가볍다고 하여 선택
 ## 수정사항
 ### 9월
 24/25일
 - 기본 뼈대 생성
+- http 페이지로 연결되는 사항을 https 연결로 수정
+    - 처음에는 연결이 되지않았지만 Vite의 플러그인 사용 후 해결
+        - ```npm install -D @vitejs/plugin-basic-ssl``` 을 통해서 플러그인 설치
+    - 플러그인 설치후 **vite.config.js** 파일 수정
+    ```
+    import { defineConfig } from 'vite'
+    import react from '@vitejs/plugin-react'
+    import basicSsl from '@vitejs/plugin-basic-ssl'
+
+    export default defineConfig({
+    plugins: [
+        react({
+        babel: {
+            plugins: [['babel-plugin-react-compiler']],
+        },
+        }),
+        basicSsl() // 플러그인 추가
+    ],
+    })
+    ```
