flowbite-react와 daisyui가 안되던 사항 발견(9.24)

--- a/수정사항.md
+++ b/수정사항.md
@@ -1,4 +1,4 @@
-# 칵테일 프로젝트
+# 칵테일 프로젝트 V1.0
 ## React 시작
 - 이때까진 CRA(Create React App)을 통해서 REACT를 설치했는데 22년부터 업데이트가 멈춘 상황 -> CRA는 버려진 상태라고 봄
 - CRA의 대안인 VITE를 통해서 REACT 설치를 진행함
@@ -38,3 +38,4 @@ npm install vite@latset
     ],
     })
     ```
+    - package.json 에서 ```"dev": "vite --host",``` 을 설정
