navbar를 이용해서 아이콘으로 홈 이동과 cocktail 클릭으로 cocktail 페이지로 이동 - BrowserRouter와 Route, Routes를 이용 - css 이용하여 cocktail 페이지에서도 container 페이지와 동일하게 페이지 css 구성

--- a/수정사항/수정사항(9.25).md
+++ b/수정사항/수정사항(9.25).md
@@ -50,3 +50,20 @@ pnpm install -D daisyui@latest
 @import "tailwindcss";
 @plugin "daisyui";
 ```
+
+## 화면 구성
+### Header, Container, Footer 구성
+- Header, Container, Footer 화면의 구성을 위해 Header의 크기, Footer의 크기를 지정하고
+3개의 컴포넌트들의 부모 컴포넌트의 display 속성을 flex로 수정
+- Container의 css 속성을 flex-grow : 1; 로 설정하여 비어있는 곳을 채우도록 설정
+```
+.homeBg {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.home-container {
+    flex-grow: 1;
+}
+```
