--- a/수정사항.md
+++ b/수정사항.md
@@ -1,41 +1,27 @@
 # 칵테일 프로젝트 V1.0
-## React 시작
-- 이때까진 CRA(Create React App)을 통해서 REACT를 설치했는데 22년부터 업데이트가 멈춘 상황 -> CRA는 버려진 상태라고 봄
-- CRA의 대안인 VITE를 통해서 REACT 설치를 진행함
-- 또한 npm보다 가볍다하여 pnpm을 활용하여 설치를 시작
-### vite 설정
+## Router 사용
+- SPA를 적용하기 위한 Router 를 적용
+### 패키지 설치
+- Router 기능을 사용할 수 있는 react-router-dom 을 설치
 ```
-npm install vite@latset
+pnpm install react-router-dom
 ```
-를 통해서 vite 설치
-- 설치 시 본인은 tsx + React Compiler로 설치함
-- 설치가 완료되면 ```npm run dev``` 를 통해서 영어 o와 enter를 입력하면 브라우저에서 실행화면을 돌릴 수 있음
-## 사용 라이브러리
-### CSS
-- bootstrap 보단 tailwind을 사용하기로 함
-    - bootstrap보다 tailwind가 가볍다고 하여 선택
-## 수정사항
-### 9월
-24/25일
-- 기본 뼈대 생성
-- http 페이지로 연결되는 사항을 https 연결로 수정
-    - 처음에는 연결이 되지않았지만 Vite의 플러그인 사용 후 해결
-        - ```npm install -D @vitejs/plugin-basic-ssl``` 을 통해서 플러그인 설치
-    - 플러그인 설치후 **vite.config.js** 파일 수정
-    ```
-    import { defineConfig } from 'vite'
-    import react from '@vitejs/plugin-react'
-    import basicSsl from '@vitejs/plugin-basic-ssl'
+| 만약 TS 타입 프로젝트인 경우 해당 패키지에 대한 타입 정의 파일이 누락되어 오류가 발생할 수 있음
+- react-router-dom은 일반적으로 타입 저으이가 내장되어 있지만, 버전이나 환경에 따라 명시적으로 설치해야 할 수 있음
+- 타입 정의 설치
+```
+pnpm install @types/react-router-dom -D
+```
+- 설치 후 프로그램 재시작
 
-    export default defineConfig({
-    plugins: [
-        react({
-        babel: {
-            plugins: [['babel-plugin-react-compiler']],
-        },
-        }),
-        basicSsl() // 플러그인 추가
-    ],
-    })
+## Link 사용
+- 컴포넌트 간 동적인 움직임을 위해서 Link 컴포넌트 사용
+### Link
+- 기본적으로 Header에 있는 부분을 통해서 컴포넌트를 이동해야 함으로 Header 컴포넌트의 각 부분에 Link를 통해서 연결할 컴포넌트를 지정
+    - 예시
     ```
-    - package.json 에서 ```"dev": "vite --host",``` 을 설정
+    <Link to="/">
+        <img src={logo} alt="Home" aria-label="Home" className='logo' />
+    </Link>
+    ```
+    - 위 코드를 통해서 img를 클릭하면 루트가 /인 최상단 컴포넌트로 이동함
